[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://chronos/chronos.jpeg" type="Texture" id=2]
[ext_resource path="res://chronos/chronos.gd" type="Script" id=3]

[node name="KinematicBody2D" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="." index="0"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="muzzle" parent="gun" index="0"]
position = Vector2( 25.2, 0 )

[node name="gun_cd" type="Timer" parent="." index="3"]

[node name="gun_charge" type="Timer" parent="." index="4"]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="gun_cd" to="." method="_on_gun_cd_timeout"]
[connection signal="timeout" from="gun_charge" to="." method="_on_gun_charge_timeout"]
